cleaned up and finished training exercises

--- a/exercises-problems.ipynb
+++ b/exercises-problems.ipynb
@@ -22,19 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.context.SparkContext object at 0x104239ad0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print sc"
    ]
@@ -48,19 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyspark.sql.context.SQLContext object at 0x1054c0090>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SQLContext\n",
     "sql = SQLContext(sc)\n",
@@ -76,19 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataFrame[id: string, address: string, age: int, city: string, gender: string, name: string, occupation: string, zip: string]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "users = sql.read.format(\"org.apache.spark.sql.cassandra\").\\\n",
     "               load(keyspace=\"movielens_small\", table=\"users\")\n",
@@ -106,55 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(id=u'bd8dab96-c2f2-4200-830d-4a44abf376ec', address=u'458 Britton Mews', age=19, city=u'New Katina', gender=u'M', name=u'Chanel Lesch', occupation=u'student', zip=u'02146')]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.limit(1).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+---+---------------+------+--------------------+----------+-----+\n",
-      "|                  id|             address|age|           city|gender|                name|occupation|  zip|\n",
-      "+--------------------+--------------------+---+---------------+------+--------------------+----------+-----+\n",
-      "|bd8dab96-c2f2-420...|    458 Britton Mews| 19|     New Katina|     M|        Chanel Lesch|   student|02146|\n",
-      "|7ccfd064-d902-402...|03155 Bartoletti ...| 46|    Kesslerberg|     M|     Alyvia Walsh MD| librarian|77008|\n",
-      "|9ce825e1-e803-4ee...|    8515 Taryn Inlet| 47|     Jaslynport|     M|       Caesar Ledner|technician|Y1A6B|\n",
-      "|32d6ba75-335d-42d...|69008 Cruickshank...| 30|      Lake Mona|     M|Miss Tristan Schi...|technician|29379|\n",
-      "|3f43f023-37bc-4b4...|7391 Bartoletti M...| 28|    Gerholdland|     M|           Elna Hahn|  engineer|20770|\n",
-      "|4d653d07-1190-4e0...|  59325 Murazik Rest| 43|     Tobinville|     M|Miss Shanika Schn...| librarian|02324|\n",
-      "|35f64a87-8640-43e...|57568 Hessel Bran...| 24|       Huelfort|     M|         Allyn Jones|   student|55454|\n",
-      "|05bada47-e349-407...|367 Boyle Row Sui...| 18|    Crooksville|     M|Ms. Paulette Kerluke|   student|97520|\n",
-      "|9758d1f3-864c-4a6...|  600 Bernhard Route| 50|     South Joey|     F|        Meagan Hoppe|     other|10016|\n",
-      "|3f439ead-24fa-4c3...|     253 Kiara Track| 16|North Wayneberg|     F|     Brooklyn Jacobs|   student|49705|\n",
-      "+--------------------+--------------------+---+---------------+------+--------------------+----------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.limit(10).show()"
    ]
@@ -174,24 +117,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+---+-----------+------+---------------+----------+-----+\n",
-      "|                  id|             address|age|       city|gender|           name|occupation|  zip|\n",
-      "+--------------------+--------------------+---+-----------+------+---------------+----------+-----+\n",
-      "|7ccfd064-d902-402...|03155 Bartoletti ...| 46|Kesslerberg|     M|Alyvia Walsh MD| librarian|77008|\n",
-      "+--------------------+--------------------+---+-----------+------+---------------+----------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.filter(users.age > 20).limit(1).show()"
    ]
@@ -205,24 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[id: string, address: string, age: int, city: string, gender: string, name: string, occupation: string, zip: string]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "user[user.age > 20]"
+    "users[users.age > 20]"
    ]
   },
   {
@@ -234,28 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+---+--------------+------+--------------+----------+-----+\n",
-      "|                  id|             address|age|          city|gender|          name|occupation|  zip|\n",
-      "+--------------------+--------------------+---+--------------+------+--------------+----------+-----+\n",
-      "|c6d0504b-cae5-41e...|43500 Metro Villa...| 53|  South Harden|     F|Dani Traphagen|     other|94043|\n",
-      "|c62f9926-2be5-47b...|561 Maegan Garden...| 52|     Eldontown|     M| Daniel Glover|  educator|93109|\n",
-      "|836c22ea-7187-4b7...|97642 Luigi Row S...| 60|West Dilanfort|     M| Dani Schiller|   retired|95076|\n",
-      "+--------------------+--------------------+---+--------------+------+--------------+----------+-----+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "user.filter(\"name LIKE 'Dani%'\").show()"
+    "users.filter(\"name LIKE 'Dani%'\").show()"
    ]
   },
   {
@@ -285,22 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[age: int]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.select(users.age)"
    ]
@@ -314,22 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[name: string, years: int]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.select(users.name, users.age.alias(\"years\"))"
    ]
@@ -343,67 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'user' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-883227d27a90>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0musers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malias\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"years\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"years > 10\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'user' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "users.select(user.name, users.age.alias(\"years\")).filter(\"years > 10\").show()"
+    "users.select(users.name, users.age.alias(\"years\")).filter(\"years > 10\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+-----+\n",
-      "|                name|years|\n",
-      "+--------------------+-----+\n",
-      "|        Chanel Lesch|   19|\n",
-      "|     Alyvia Walsh MD|   46|\n",
-      "|       Caesar Ledner|   47|\n",
-      "|Miss Tristan Schi...|   30|\n",
-      "|           Elna Hahn|   28|\n",
-      "|Miss Shanika Schn...|   43|\n",
-      "|         Allyn Jones|   24|\n",
-      "|Ms. Paulette Kerluke|   18|\n",
-      "|        Meagan Hoppe|   50|\n",
-      "|     Brooklyn Jacobs|   16|\n",
-      "|      Missie Yost MD|   18|\n",
-      "|      Elbridge Swift|   23|\n",
-      "|     Hettie Wiza DDS|   27|\n",
-      "|      Amil Wisozk MD|   48|\n",
-      "|  Penni O'Conner PhD|   26|\n",
-      "|       Basil Labadie|   25|\n",
-      "|      Deliah McGlynn|   28|\n",
-      "|  Mrs. Shay Anderson|   27|\n",
-      "|Miss Chanel Pfeff...|   20|\n",
-      "|       Seneca Schoen|   68|\n",
-      "+--------------------+-----+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tmp = users.select(users.name, users.age.alias(\"years\"))\n",
     "tmp[tmp.years > 10].show()"
@@ -422,44 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+\n",
-      "|old_age|\n",
-      "+-------+\n",
-      "|    190|\n",
-      "|    460|\n",
-      "|    470|\n",
-      "|    300|\n",
-      "|    280|\n",
-      "|    430|\n",
-      "|    240|\n",
-      "|    180|\n",
-      "|    500|\n",
-      "|    160|\n",
-      "|    180|\n",
-      "|    230|\n",
-      "|    270|\n",
-      "|    480|\n",
-      "|    260|\n",
-      "|    250|\n",
-      "|    280|\n",
-      "|    270|\n",
-      "|    200|\n",
-      "|    680|\n",
-      "+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "users.selectExpr(\"age * 10 as old_age\").show()"
    ]
@@ -474,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -486,44 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+--------------------+\n",
-      "|        col|                name|\n",
-      "+-----------+--------------------+\n",
-      "|Documentary|Fire on the Mount...|\n",
-      "|     Action|Rumble in the Bro...|\n",
-      "|  Adventure|Rumble in the Bro...|\n",
-      "|      Crime|Rumble in the Bro...|\n",
-      "|    Romance|         Diva (1981)|\n",
-      "|    Mystery|         Diva (1981)|\n",
-      "|   Thriller|         Diva (1981)|\n",
-      "|      Drama|         Diva (1981)|\n",
-      "|     Action|         Diva (1981)|\n",
-      "|      Drama|Magic Hour, The (...|\n",
-      "|     Comedy|      Kingpin (1996)|\n",
-      "|     Comedy|    Sleepover (1995)|\n",
-      "|      Drama|    Sleepover (1995)|\n",
-      "|      Crime|L.A. Confidential...|\n",
-      "|  Film-Noir|L.A. Confidential...|\n",
-      "|    Mystery|L.A. Confidential...|\n",
-      "|   Thriller|L.A. Confidential...|\n",
-      "|     Comedy|Raising Arizona (...|\n",
-      "|      Drama|     Infinity (1996)|\n",
-      "|     Comedy|Kicked in the Hea...|\n",
-      "+-----------+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql.functions import explode\n",
     "\n",
@@ -539,44 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+--------------------+\n",
-      "|       food|                name|\n",
-      "+-----------+--------------------+\n",
-      "|Documentary|Fire on the Mount...|\n",
-      "|     Action|Rumble in the Bro...|\n",
-      "|  Adventure|Rumble in the Bro...|\n",
-      "|      Crime|Rumble in the Bro...|\n",
-      "|    Romance|         Diva (1981)|\n",
-      "|    Mystery|         Diva (1981)|\n",
-      "|   Thriller|         Diva (1981)|\n",
-      "|      Drama|         Diva (1981)|\n",
-      "|     Action|         Diva (1981)|\n",
-      "|      Drama|Magic Hour, The (...|\n",
-      "|     Comedy|      Kingpin (1996)|\n",
-      "|     Comedy|    Sleepover (1995)|\n",
-      "|      Drama|    Sleepover (1995)|\n",
-      "|      Crime|L.A. Confidential...|\n",
-      "|  Film-Noir|L.A. Confidential...|\n",
-      "|    Mystery|L.A. Confidential...|\n",
-      "|   Thriller|L.A. Confidential...|\n",
-      "|     Comedy|Raising Arizona (...|\n",
-      "|      Drama|     Infinity (1996)|\n",
-      "|     Comedy|Kicked in the Hea...|\n",
-      "+-----------+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "movies.select(explode(movies.genres).alias(\"food\"), movies.name).show()"
    ]
@@ -612,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -658,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -669,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -699,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -719,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -737,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -753,22 +491,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[id: string, avg_rating: float, genres: array<string>, name: string, release_date: date, url: string, video_release_date: date]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sql.sql(\"SELECT * from movies where name LIKE 'Rumble in the Bronx%'\")"
    ]
@@ -782,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -806,33 +533,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+------+\n",
-      "|                name|rating|\n",
-      "+--------------------+------+\n",
-      "|Secrets & Lies (1...|     5|\n",
-      "|        Kolya (1996)|     5|\n",
-      "|Sense and Sensibi...|     5|\n",
-      "|      Titanic (1997)|     5|\n",
-      "|         Emma (1996)|     5|\n",
-      "|As Good As It Get...|     5|\n",
-      "|L.A. Confidential...|     5|\n",
-      "|Shall We Dance? (...|     5|\n",
-      "|Good Will Hunting...|     5|\n",
-      "|        Fargo (1996)|     5|\n",
-      "+--------------------+------+\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ratings = \" \".join([\"SELECT movies.name, ratings.rating from users\",\n",
     "                    \"JOIN ratings on users.id = ratings.user_id\",\n",
